Set ETHONMEM_SOURCE_DIR to the current directory
Without ETHONMEM_SOURCE_DIR set in CMakeLists.txt we can't build
the static library. The include directory is just non-existent.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 #Set up project
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
 PROJECT(ethonmem)
+set(ETHONMEM_SOURCE_DIR .)
 
 #Set appropiate flags. Currently only supports g++ 4.5.0 and higher versions.
 IF(CMAKE_COMPILER_IS_GNUCXX)
