--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,21 +1,26 @@
 #Set up project
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-PROJECT(ethonmem)
+cmake_minimum_required(VERSION 2.4)
+project(ethonmem)
 set(ETHONMEM_SOURCE_DIR .)
 
-#Set appropiate flags. Currently only supports g++ 4.5.0 and higher versions.
-IF(CMAKE_COMPILER_IS_GNUCXX)
-  set(CMAKE_CXX_FLAGS "-std=c++0x")
-ENDIF()
+# Set appropiate flags. A C++11 compiler is required.
+if(CMAKE_COMPILER_IS_GNUCXX)
+  set(CMAKE_CXX_FLAGS "-std=c++0x -Wall -Wextra -pedantic")
+  set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g")
+  set(CMAKE_CXX_FLAGS_RELEASE "-O3 -s -DNDEBUG")
+endif()
 
-#Boost is required to build Ethonmem.
-FIND_PACKAGE(Boost REQUIRED)
+# Search for required packages.
+find_package(Boost 1.42.0 COMPONENTS system filesystem REQUIRED)
 
-#Specify include directories.
-INCLUDE_DIRECTORIES( ${ETHONMEM_SOURCE_DIR}/include )
+# Specify include directories.
+set(ETHONMEM_INCLUDE_DIR ${ETHONMEM_SOURCE_DIR}/include)
+INCLUDE_DIRECTORIES(
+	${ETHONMEM_INCLUDE_DIR}
+)
 
-#Compile ethonmem as static library.
-ADD_LIBRARY( ethonmem STATIC
+# Specify source files.
+set(ETHONMEM_SOURCE_FILES
   source/Error.cpp
   source/Debugger.cpp
   source/Memory.cpp
@@ -25,11 +30,16 @@ ADD_LIBRARY( ethonmem STATIC
   source/Threads.cpp
 )
 
+#Compile ethonmem as library.
+ADD_LIBRARY(ethonmem
+	${ETHONMEM_SOURCE_FILES}
+)
+
 #Link.
-TARGET_LINK_LIBRARIES( ethonmem boost_system boost_filesystem )
+TARGET_LINK_LIBRARIES(ethonmem ${Boost_LIBRARIES})
 
 #Install ethonmem.
-INSTALL(FILES libethonmem.a DESTINATION lib)
+INSTALL(TARGETS ethonmem DESTINATION lib)
 FILE(GLOB files "${ETHONMEM_SOURCE_DIR}/include/Ethon/*.hpp")
 INSTALL(FILES ${files} DESTINATION include/Ethon)
 INSTALL(FILES "${ETHONMEM_SOURCE_DIR}/include/Ethonmem.hpp" DESTINATION include/)
